Refactor MockNewznab